# iyou_poly

./: .dockerignore  .env.example  .gitignore  AGENT.md  CHANGES_SUMMARY.md  DOCUMENTATION_SUMMARY.md  Dockerfile  FEDERATED_AUTH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  POLLY_DEVELOPER_GUIDE.md  POLY_DEVELOPER_GUIDE.md  PROJECT_SUMMARY.md  README.md  TODO.md  check_votes.py  conftest.py  docker-entrypoint.sh  final_vote_test.py  manage.py  minimal_vote_test.py  pyproject.toml  simple_vote_test.py  simple_vote_test_final.py  test_auth_vc.py  test_complete_workflow.py  test_copy_functionality.py  test_copy_functionality_fixed.py  test_create_file.txt  test_did_login_comprehensive.py  test_did_vc.py  test_didkit_verify.py  test_file_creation.txt  test_fixed_vc.py  test_minimal_vc.py  test_rust_integration.py  test_verify_federated_vc.py  test_verify_generated_vc.py  test_vote_simple.py  test_voting_final.py  (+1 more)
apps/accounts/: __init__.py  admin.py  apps.py  backends.py  did_views.py  forms.py  models.py  pipeline.py  urls.py  views.py
apps/accounts/did_rust_wrapper/: test_wrapper.py
apps/core/: admin.py  apps.py  context_processors.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  verification.py  views.py
apps/poller/: admin.py  apps.py  embed.py  models.py  nostr.py  nostr_ingest.py  serializers.py  signals.py  tests.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: .~lock.POLLY_PROTOCOL.md#  AI_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDENTIAL_ISSUANCE_ARCHITECTURE.md  CREDENTIAL_MANAGEMENT_SYSTEM.md  DECENTRALIZED_POLLING_SPEC.md  DEVELOPER_GUIDE.md  DEVELOPER_LOG.md  DOCUMENTATION_SUMMARY.md  FEDERATED_AUTHENTICATION.md  HEADER_SPEC.md  IMPLEMENTATION_SUMMARY.md  OMNI_SOCIAL_PROTOCOL_V1.md  POLLY_PROTOCOL.md  POLY_DEVELOPER_GUIDE.md  POLY_PROTOCOL.md  POLY_PROTOCOL_SPEC_V1_DRAFT.md  POLY_PROTOCOL_SPEC_V1_FEEDBACK.md  POLY_PROTOCOLv2.md  RUST_DID_INTEGRATION.md  VOTING_FUNCTIONALITY.md  vc_management.md
docs/archive/: CHANGES_SUMMARY.md  FEDERATED_AUTHENTICATION.md  IMPLEMENTATION_SUMMARY.md  OIDC_INTEGRATION.md  ONBOARDING_OVERVIEW.md  POLY_PROTOCOLv2.md  RUST_DID_INTEGRATION.md  UI_SIMPLIFICATION.md  VOTING_FUNCTIONALITY.md  blob.txt
docs/ecosystem_shared/: AUTH_FLOW_SPECIFICATION.md  OMNI_SOCIAL_AUTH_STANDARDIZATION.md  auth_pkce.py  satellite-coordination.md
scripts/: build-image.sh  check_votes.py
temp/: STUPID_AI.txt  debug_did_and_vc.txt  did_conformity.txt  federated_authentication_next_steps.txt  last_console_outputs.txt  multi_creds.txt  new_moves.txt  next_steps.txt  oidc_config.txt  polling_solutions.txt  ruff_mods.txt  wrapup.txt
templates/: base.html
templates/accounts/: did_login.html  vc_management.html
templates/partials/: footer.html  navbar.html
templates/registration/: did_login.html  login.html  register.html
test_vc_verification/: generate_and_verify_vc.py
tests/: __init__.py
tests/bridge/: test_bridge_flow.py
tests/e2e/: test_login_workflow.py
tests/fixtures/: test_vc.json
tests/integration/: test_vc.py
tests/unit/: test_voting.py
(+98 files in other folders)
